Updated funders and license info

--- a/src/app/components/shell/footer/footer.hbs
+++ b/src/app/components/shell/footer/footer.hbs
@@ -26,17 +26,16 @@
             </ul>
 
             <p>
-                Supported by William and Flora Hewlett Foundation,
-                Bill &amp; Melinda Gates Foundation, The Michelson 20
-                Million Minds Foundation, Maxfield Foundation, Open
-                Society Foundations, Laura and John Arnold Foundation
-                and Rice University.
+                Supported by Rice University, the Laura and John Arnold Foundation,
+                Bill &amp; Melinda Gates Foundation, the William and Flora Hewlett Foundation,
+                the Calvin K. Kazanjian Economics Foundation, the Maxfield Foundation,
+                the Bill and Stephanie Sick Fund, and the Michelson 20 MM Foundation.
             </p>
 
             <p>
                 &copy; 1999-2015, Rice University. Except where otherwise noted,
-                textbooks on this site are licensed under a Creative
-                Commons Attribution 4.0 License.
+                textbooks on this site are licensed under a Creative Commons Attribution
+                4.0 International License.
             </p>
 
             <p>
