Fix scrolling behavior for mobile devices
Remove Touch-Scroller (superseded by $.applyScrollFix) and leftover
code that referenced it
Update code that still used TouchScroller to use applyScrollFix
Make applyScrollFix watch for touches outside the scrollable item
(equivalent to mouse leave on non-touch)

--- a/src/app/pages/about-us/headshot/headshot.hbs
+++ b/src/app/pages/about-us/headshot/headshot.hbs
@@ -5,5 +5,5 @@
 <div class="details">
     <div class="name">{{name}}</div>
     <div class="title">{{title}}</div>
-    <div class="description">{{{description}}}</div>
+    <div class="description mac-scroll">{{{description}}}</div>
 </div>
