Apply "coming soon" styling to unpublished books
Also hid some items that don’t apply to unpublished books

--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -125,6 +125,10 @@
         background-color: darken(color(orange), 5%);
     }
 
+    .btn.hidden {
+        display: none;
+    }
+
     .book-info {
         justify-content: space-between;
         margin-bottom: 6rem;
