--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -4,140 +4,142 @@
     @import url(/app/components/remover/remover.css);
 </style>
 <div class="details-page hidden">
-        <section class="container book-info">
-            <div class="cover-wrap"><img class="book-cover" /></div>
-                <section class="details">
-                    <h1 class="title"></h1>
-                    <div class="tabs">
-                        <a class="table-of-contents-link" class="tab"><span>Table of Contents</span></a>
-                        <div class="table-of-contents hidden">
-                            <div class="box mac-scroll">
-                                <div class="toc-remover"></div>
-                                <ol></ol>
-                            </div>
+    <section class="container book-info">
+        <div class="cover-wrap"><img class="book-cover" /></div>
+            <section class="details">
+                <h1 class="title"></h1>
+                <div class="tabs">
+                    <a class="table-of-contents-link" class="tab"><span>Table of Contents</span></a>
+                    <div class="table-of-contents hidden">
+                        <div class="box mac-scroll">
+                            <div class="toc-remover"></div>
+                            <ol></ol>
                         </div>
-                        <a href="#resources" class="tab"><span>Instructor Resources</span></a>
-                        <a href="#student-resources-section" class="tab"><span>Student Resources</span></a>
-                        <a href="#details" class="tab"><span>Details</span></a>
-                        <a href="#errata" class="tab errata-tab"><span>Errata</span></a>
                     </div>
-                    <p class="blurb"></p>
+                    <a href="#resources" class="tab"><span>Instructor Resources</span></a>
+                    <a href="#student-resources-section" class="tab"><span>Student Resources</span></a>
+                    <a href="#details" class="tab"><span>Details</span></a>
+                    <a href="#errata" class="tab errata-tab"><span>Errata</span></a>
+                </div>
+                <p class="blurb"></p>
+                <div>
                     <h2>Senior Contributing Authors</h2>
                     <div id="top-authors"></div>
                     <div class="links">
                         <a class="go-to" href="#details">See all authors</a>
-                    </div>
-                </section>
-                <section class="floating-menu">
-                    <div class="box">
-                    <!-- <h3>Get this title</h3> -->
-                    <div class="get-this-book"></div>
-                    <div class="notes">
-                        <!-- <small><sup>*</sup>Our website is Section 508 Level A accessible.</small> -->
-                    </div>
-                    <div class="cta">
-                        <p class="interested-text">
-                            Using this book, or interested in adopting it for your
-                            course?
-                        </p>
-                        <a href="/adoption?{{title}}" class="btn">Adopt This Book</a>
-                        <a href="/interest?{{title}}" class="secondary btn">get interested</a>
-                    </div>
                 </div>
-                </section>
-        </section>
-        <section class="endorsement">
-            <div class="container">
-                <blockquote>
-                    <div id="endorsement"></div>
-                        <p class="attribution">
-                                <span>&mdash; <span id="attribution"></span></span>
-                                <span id="attribution-school"></span>
-                        </p>
+            </div>
+            </section>
+            <section class="floating-menu">
+                <div class="box">
+                <!-- <h3>Get this title</h3> -->
+                <div class="get-this-book"></div>
+                <div class="notes">
+                    <!-- <small><sup>*</sup>Our website is Section 508 Level A accessible.</small> -->
+                </div>
+                <div class="cta">
+                    <p class="interested-text">
+                        Using this book, or interested in adopting it for your
+                        course?
+                    </p>
+                    <a href="/adoption?{{title}}" class="btn hide-if-coming-soon">Adopt This Book</a>
+                    <a href="/interest?{{title}}" class="secondary btn">get interested</a>
+                </div>
+            </div>
+            </section>
+    </section>
+    <section class="endorsement">
+        <div class="container">
+            <blockquote>
+                <div id="endorsement"></div>
+                    <p class="attribution">
+                            <span>&mdash; <span id="attribution"></span></span>
+                            <span id="attribution-school"></span>
+                    </p>
 
-                </blockquote>
-            </div>
-            {{{strips}}}
-        </section>
-        <section class="resources block">
-            <div class="container">
-            <div id="resources" class="row">
-                <h3>OpenStax Instructor Resources</h3>
-                <p>
-                    Access these free resources with your verified instructor account.
-                    <span id="extra-instructions"></span>
-                </p>
-                <div id="instructor-resources" class="resource"></div>
-            </div>
-            <div class="row">
-            <h3>Ally Resources</h3>
-            <p>
-                OpenStax Allies provide additional, low-cost resources for your
-                book. See what’s offered for this title below and learn more about
-                our <a href="/allies">Allies here</a>.</p>
-            <div id='allies' class="resource"></div>
-            </div>
-            <div id="student-resources-section" class="row">
-                <h3>Student Resources</h3>
-                <p>
-                    Take a look at our free student resources that are integrated
-                    with your book to help you ace your course.
-                </p>
-                <div id="student-resources" class="resource"></div>
-            </div>
-            <div class="cta hidden">
-                <a class="btn handbook-link">Learn how you can help bring more
-                    OpenStax books to your campus!</a>
-            </div>
+            </blockquote>
         </div>
-        </section>
-            <section id="details" class="authors">
-                <div class="container">
-                <h2>Details</h2>
-                <h3>Authors</h3>
-                <div id="all-authors"></div>
-                <table class="publish-info">
-                    <tbody>
-                        <tr>
-                            <th>Publish Date</th>
-                            <td id='publish-date'></td>
-                        </tr>
-                        <tr>
-                            <th>ISBN-10</th>
-                            <td id='isbn-10'></td>
-                        </tr>
-                        <tr>
-                            <th>ISBN-13</th>
-                            <td id='isbn-13'></td>
-                        </tr>
-                        <tr>
-                            <th>License</th>
-                            <td class="license">
-                                <img src="/images/details/by-license.png" />
-                                <div>
-                                    <div class="text"></div>
-                                    <div class="extra-text"></div>
-                                </div>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-            </section>
-            <section id="errata" class="errata">
-                <div class="container">
-                <h2>Errata</h2>
-                <p>
-                    All OpenStax textbooks undergo a rigorous review process. However, like
-                    any professional-grade textbook, errors sometimes occur. The good part
-                    is, since our books are web-based, we can make updates periodically. If
-                    you have a correction to suggest, submit it here. We'll review your
-                    suggestion and make necessary changes.
-                </p>
-                <ul class="links no-bullets">
-                    <li><a class="go-to errata-link">Errata list</a></li>
-                    <li><a class="go-to suggest-correction-link">Suggest a correction</a></li>
-                </ul>
-            </div>
-            </section>
+        {{{strips}}}
+    </section>
+    <section class="resources block">
+        <div class="container">
+        <div id="resources" class="row">
+            <h3>OpenStax Instructor Resources</h3>
+            <p>
+                Access these free resources with your verified instructor account.
+                <span id="extra-instructions"></span>
+            </p>
+            <div id="instructor-resources" class="resource"></div>
+        </div>
+        <div class="row">
+        <h3>Ally Resources</h3>
+        <p>
+            OpenStax Allies provide additional, low-cost resources for your
+            book. See what’s offered for this title below and learn more about
+            our <a href="/allies">Allies here</a>.</p>
+        <div id='allies' class="resource"></div>
+        </div>
+        <div id="student-resources-section" class="row">
+            <h3>Student Resources</h3>
+            <p>
+                Take a look at our free student resources that are integrated
+                with your book to help you ace your course.
+            </p>
+            <div id="student-resources" class="resource"></div>
+        </div>
+        <div class="cta hidden">
+            <a class="btn handbook-link">Learn how you can help bring more
+                OpenStax books to your campus!</a>
+        </div>
+    </div>
+    </section>
+    <section id="details" class="authors">
+        <div class="container">
+        <h2>Details</h2>
+        <h3>Authors</h3>
+        <div id="all-authors"></div>
+        <table class="publish-info">
+            <tbody>
+                <tr>
+                    <th>Publish Date</th>
+                    <td id='publish-date'></td>
+                </tr>
+                <tr>
+                    <th>ISBN-10</th>
+                    <td id='isbn-10'></td>
+                </tr>
+                <tr>
+                    <th>ISBN-13</th>
+                    <td id='isbn-13'></td>
+                </tr>
+                <tr>
+                    <th>License</th>
+                    <td class="license">
+                        <img src="/images/details/by-license.png" />
+                        <div>
+                            <div class="text"></div>
+                            <div class="extra-text"></div>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    </section>
+    <section id="errata" class="errata">
+        <div class="container">
+        <h2>Errata</h2>
+        <p>
+            All OpenStax textbooks undergo a rigorous review process. However, like
+            any professional-grade textbook, errors sometimes occur. The good part
+            is, since our books are web-based, we can make updates periodically. If
+            you have a correction to suggest, submit it here. We'll review your
+            suggestion and make necessary changes.
+        </p>
+        <ul class="links no-bullets">
+            <li><a class="go-to errata-link">Errata list</a></li>
+            <li><a class="go-to suggest-correction-link">Suggest a correction</a></li>
+        </ul>
+    </div>
+    </section>
 </div>
