Add touch-scroll handling to scroll fix
I can only test on mobile devices when code is in dev, so this may turn
into a series of PRs.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -105,6 +105,8 @@ sup {
 }
 
 .mac-scroll {
+    -webkit-overflow-scrolling: touch;
+
     &::-webkit-scrollbar {
         -webkit-appearance: none;
     }
