--- a/src/app/pages/impact/impact.scss
+++ b/src/app/pages/impact/impact.scss
@@ -163,13 +163,12 @@ $hero-break-width: 880px;
     }
 
     .affiliates {
-        background-color: color(blue);
-        color: color(neutral-lightest);
+        color: color(gray);
         text-align: center;
 
         h2,
         a {
-            color: color(neutral-lightest);
+            color: inherit;
         }
 
         h2 {
