--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -10,8 +10,8 @@
                 <h1 class="title"></h1>
                 <div class="tabs">
                     <a class="table-of-contents-link" class="tab"><span>Table of Contents</span></a>
-                    <div class="table-of-contents hidden">
-                        <div class="box mac-scroll">
+                    <div class="table-of-contents hidden mac-scroll">
+                        <div class="box">
                             <div class="toc-remover"></div>
                             <ol></ol>
                         </div>
