--- a/src/app/pages/allies/allies.scss
+++ b/src/app/pages/allies/allies.scss
@@ -71,11 +71,19 @@ $text-dark2: rgba(0, 0, 0, 0.7);
                 display: none;
             }
 
+            a {
+                transition: All ease-in-out 0.3s;
+
+                &:hover,
+                &:focus {
+                    opacity: 0.7;
+                }
+            }
+
             .logo-text,
             img {
                 max-height: 7.5rem;
                 max-width: 14rem;
-                opacity: 0.88;
             }
         }
     }
