--- a/src/app/pages/impact/impact.scss
+++ b/src/app/pages/impact/impact.scss
@@ -210,9 +210,17 @@ $hero-break-width: 880px;
             > li {
                 margin: 4rem;
 
+                a {
+                    transition: All ease-in-out 0.3s;
+
+                    &:hover,
+                    &:focus {
+                        opacity: 0.7;
+                    }
+                }
+
                 img {
                     max-width: 12rem;
-                    opacity: 0.7;
                 }
             }
         }
