--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,10 @@
 // scss-lint:disable IdSelector
 @import 'variables';
 @import 'mixins';
+@import '//fast.fonts.net/cssapi/437b6557-ce99-4f35-97ff-64a93247731f.css';
 
 html {
-    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Neue Helvetica W01';
     font-size: 62.5%;
     font-weight: 300;
     line-height: 1.42857143;
