add home banner flyin/flyout animations back

--- a/src/app/pages/home/banners/us-history/us-history.hbs
+++ b/src/app/pages/home/banners/us-history/us-history.hbs
@@ -3,24 +3,24 @@
 </style>
 <div class="us-history">
     <div class="container">
-        <div class="john-adams flyin"></div>
-        <div class="sacajawea flyin"></div>
-        <div class="clermont flyin"></div>
-        <div class="book flyin"></div>
+        <div class="john-adams flyout"></div>
+        <div class="sacajawea flyout"></div>
+        <div class="clermont flyout"></div>
+        <div class="book flyout"></div>
 
         <div class="student"></div>
 
-        <div class="square-1 flyin"></div>
-        <div class="square-2 flyin"></div>
-        <div class="square-3 flyin"></div>
-        <div class="square-4 flyin"></div>
+        <div class="square-1 flyout"></div>
+        <div class="square-2 flyout"></div>
+        <div class="square-3 flyout"></div>
+        <div class="square-4 flyout"></div>
 
-        <div class="now-i-can flyin">
+        <div class="now-i-can flyout">
             <span>Now I can</span>
             <span class="quote">Travel back in time</span>
         </div>
 
-        <div class="subject-links flyin">
+        <div class="subject-links flyout">
             <ul>
                 <li>
                     <a class="btn btn-large btn-orange explore-subject" href="/details?us-history">
