--- a/src/app/pages/home/banners/us-history/us-history.scss
+++ b/src/app/pages/home/banners/us-history/us-history.scss
@@ -13,6 +13,13 @@
     }
 }
 
+.flyin,
+.flyout {
+    @include desktop {
+        opacity: 0;
+    }
+}
+
 .us-history {
     background-image: url('/images/home/subjects/us-history/background.jpg');
     background-attachment: fixed;
@@ -63,7 +70,14 @@
 
         @include desktop {
             display: block;
-            animation: loop 30s normal infinite linear forwards;
+            animation: flyin 0.5s 1.2s 1 normal ease-in forwards, loop 30s 1.5s normal infinite linear forwards;
+        }
+
+        &.flyout {
+            @include desktop {
+                animation: flyout 0.5s 1 normal forwards;
+                opacity: 1;
+            }
         }
     }
 
@@ -138,24 +152,31 @@
 
         @include desktop {
             display: block;
-            animation: loop 40s reverse infinite linear forwards;
+            animation: flyin 0.5s 1.4s 1 normal ease-in forwards, loop 40s 1.8s reverse infinite linear forwards;
+        }
+
+        &.flyout {
+            @include desktop {
+                animation: flyout 0.5s 1 normal forwards;
+                opacity: 1;
+            }
         }
     }
 
     .sacajawea {
         background-image: url('/images/home/subjects/us-history/sacajawea.png');
         height: 10rem;
-        left: 26rem;
+        left: 31rem;
         position: absolute;
-        top: 40%;
+        top: 44%;
         width: 12.4rem;
     }
 
     .john-adams {
         background-image: url('/images/home/subjects/us-history/john-adams.png');
         height: 8rem;
-        right: 18rem;
         position: absolute;
+        right: 14rem;
         top: 30%;
         width: 6.7rem;
     }
@@ -181,7 +202,7 @@
         @include tablet {
             top: 5%;
             left: auto;
-            right: 15%;
+            right: 25%;
             width: 30rem;
             height: 30rem;
         }
@@ -197,6 +218,14 @@
 
         @include desktop {
             left: 40%;
+            animation: flyin 0.5s 1s 1 normal forwards;
+        }
+
+        &.flyout {
+            @include desktop {
+                animation: flyout 0.5s 1 normal forwards;
+                opacity: 1;
+            }
         }
     }
 
@@ -212,9 +241,9 @@
 
         @include tablet {
             bottom: 0;
-            height: 40rem;
             right: -6rem;
-            width: 35rem;
+            height: 53rem;
+            width: 45.4rem;
         }
 
         @include desktop {
@@ -248,10 +277,18 @@
 
         @include desktop {
             right: auto;
-            left: 5rem;
+            left: 10rem;
             width: 59rem;
             height: 9rem;
             font-size: 3.6rem;
+            animation: flyin 0.5s 1.8s 1 normal forwards;
+        }
+
+        &.flyout {
+            @include desktop {
+                animation: flyout 0.5s 1 normal forwards;
+                opacity: 1;
+            }
         }
 
         .quote {
@@ -287,7 +324,7 @@
 
         @include tablet {
             width: 27rem;
-            bottom: 5rem;
+            bottom: 6.3rem;
             left: 5rem;
         }
 
@@ -298,8 +335,16 @@
         }
 
         @include desktop {
-            left: 18.4rem;
+            left: 23.8rem;
             right: auto;
+            animation: flyin 0.5s 1.8s 1 normal forwards;
+        }
+
+        &.flyout {
+            @include desktop {
+                animation: flyout 0.5s 1 normal forwards;
+                opacity: 1;
+            }
         }
 
         ul {
@@ -339,7 +384,7 @@
             margin-bottom: 1.5rem;
 
             @include tablet {
-                margin-right: 1.5rem;
+                margin-right: 1rem;
             }
 
             @include phone {
