--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -4,9 +4,15 @@
 .home-page {
     background-color: lighten(color(neutral-lighter), 8%);
     flex: 1 0 auto;
+    opacity: 0;
+    transition: opacity 1s;
 
     @include desktop {
         margin-top: -6rem;
+    }
+
+    &.fade-in {
+        opacity: 1;
     }
 
     .book-banners {
