--- a/src/app/pages/higher-ed/higher-ed.hbs
+++ b/src/app/pages/higher-ed/higher-ed.hbs
@@ -5,13 +5,13 @@
                 <div class="student"></div>
                 <div class="overlay">
                     <div class="text-block">
-                        <h1 class="header">Free textbooks. High quality. No catch.</h1>
-                        <div class="blurb">
+                        <h1 class="header">Free textbooks.<br> High quality.<br> No catch.</h1>
+                        <p class="blurb">
                             Some of the most valuable investments don't have a price tag.
                             Neither do our textbooks. Our free, high-quality textbooks and
                             learning technology give students the tools they need to
                             succeed without having to weigh the cost.
-                        </div>
+                        </p>
                     </div>
                 </div>
             </div>
