--- a/src/app/pages/impact/impact.hbs
+++ b/src/app/pages/impact/impact.hbs
@@ -8,16 +8,17 @@
                 <div class="overlay">
                     <div class="text-block">
                         <h1 class="header">We measure our success in access.</h1>
-                        <div class="blurb">
+                        <p class="blurb">
                             Since 2012, OpenStax has saved students $66 million and counting by offering free,
                             peer-reviewed textbooks for the highest-enrollment college courses.
                             Meet the schools who’ve adopted OpenStax and some of the students who’ve benefited
                             from free access to the learning materials they need to succeed.
-                        </div>
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
+        {{{strips}}}
         <span class="scrolldown-chevron"><a href="#affiliates"><i class="fa fa-chevron-down"></i></a></span>
 
         <div id="affiliates" class="affiliates">
@@ -41,9 +42,7 @@
                 {{/each}}
             </ul>
 
-            <div class="adopters"><a href="/adopters">See a full list of institutions that have adopted OpenStax</a></div>
+            <div class="adopters"><a href="/adopters">See a full list of institutions that have adopted OpenStax<i></i></a></div>
         </div>
     </main>
-
-    {{{strips}}}
 </div>
