--- a/src/app/pages/k-12/hero/hero.scss
+++ b/src/app/pages/k-12/hero/hero.scss
@@ -27,8 +27,8 @@ $hero-break-width: 880px;
         @include collapsed {
             align-items: stretch;
             background: none;
-            height: calc(100vh - 6rem);
-            max-height: 53rem;
+//            height: calc(100vh - 6rem);
+            max-height: 48rem;
         }
 
         > div {
