--- a/src/styles/components/hero.scss
+++ b/src/styles/components/hero.scss
@@ -14,6 +14,10 @@
         text-align: left;
     }
 
+    @include tablet {
+        text-align: left;
+    }
+
     &.w-cards {
         padding: 1.5rem;
     }
