change every occurrence of allies to partners

--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -67,9 +67,9 @@
             <div id="instructor-resources" class="resource"></div>
         </div>
         <div class="row">
-        <h3>Ally Resources</h3>
+        <h3>Partner Resources</h3>
         <p>
-            OpenStax Allies provide additional, low-cost resources for your
+            OpenStax partners provide additional, low-cost resources for your
             book. See what’s offered for this title below and learn more about
             our <a href="/allies">Allies here</a>.</p>
         <div id='allies' class="resource"></div>
