Make 'create account' link open in same window

--- a/src/app/pages/higher-ed/higher-ed.hbs
+++ b/src/app/pages/higher-ed/higher-ed.hbs
@@ -40,7 +40,7 @@
                             like test banks and solution manuals to plan your
                             course.
                         </div>
-                        <div class="more"><a class="login-link">Create Account</a></div>
+                        <div class="more"><a href="{{loginLink}}" data-local="true">Create Account</a></div>
                     </li>
 
                     <li class="numbered step">
