change allies folder structure & links to partners

--- a/src/app/components/buckets/buckets.scss
+++ b/src/app/components/buckets/buckets.scss
@@ -91,9 +91,9 @@
             }
         }
 
-        &.allies {
+        &.partners {
             background-color: color(orange);
-            background-image: url('/images/home/buckets/allies.jpg');
+            background-image: url('/images/home/buckets/partners.jpg');
             background-repeat: no-repeat;
             background-size: cover;
         }
