--- a/src/app/pages/adoption/adoption.hbs
+++ b/src/app/pages/adoption/adoption.hbs
@@ -85,7 +85,7 @@
                 <input name="00NU00000052VId" type="number" min=0 required />
             </label>
 
-            <label>Which ally resources are you using with your book?
+            <label>Which partner resources are you using with your book?
                 <span class="select-instructions">You may select more than one.</span>
                 <select multiple name="00NU0000005VmTu">
                      <option value="None" disabled selected>None</option>
@@ -101,13 +101,13 @@
                      <option value="WebAssign">WebAssign</option>
                      <option value="Wiley Plus">Wiley Plus</option>
                      <option value="XYZ Homework">XYZ Homework</option>
-                     <option value="" data-other="other-ally">Other (specify below)</option>
+                     <option value="" data-other="other-partner">Other (specify below)</option>
                 </select>
             </label>
 
-            <label id="other-ally">Other
+            <label id="other-partner">Other
                 <input name="00NU0000005Vls8" class="short" type="text"
-                placeholder="Ally resources not listed above?">
+                placeholder="Partner resources not listed above?">
             </label>
 
             <label>
@@ -121,15 +121,15 @@
 
         <div class="col">
             <label class="question">
-                Which of our <a href="/allies">allies</a> would you like to give
+                Which of our <a href="/partners">partners</a> would you like to give
                 permission to contact you about additional resources to support
                 our books?
                 <span class="select-instructions">You may select more than one.</span>
                 <select multiple name="00NU00000055spm">
                     <option value="None" disabled selected>None</option>
-                    <option value="Online homework allies">Online homework allies</option>
-                    <option value="Adaptive courseware allies">Adaptive courseware allies</option>
-                    <option value="Customization tool allies">Customization tool allies</option>
+                    <option value="Online homework partners">Online homework partners</option>
+                    <option value="Adaptive courseware partners">Adaptive courseware partners</option>
+                    <option value="Customization tool partners">Customization tool partners</option>
                 </select>
             </label>
 
