--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -71,8 +71,8 @@
         <p>
             OpenStax partners provide additional, low-cost resources for your
             book. See what’s offered for this title below and learn more about
-            our <a href="/allies">Allies here</a>.</p>
-        <div id='allies' class="resource"></div>
+            our <a href="/partners">Partners here</a>.</p>
+        <div id='partners' class="resource"></div>
         </div>
         <div id="student-resources-section" class="row">
             <h3>Student Resources</h3>
