--- a/src/app/pages/renewal/renewal.hbs
+++ b/src/app/pages/renewal/renewal.hbs
@@ -95,7 +95,7 @@
                 <input name="00NU00000052VId" type="number" required />
             </label>
 
-            <label>Which ally resources are you using with your book?
+            <label>Which partner resources are you using with your book?
                 <select multiple name="00NU0000005VmTu">
                      <option value="None" disabled selected>None</option>
                      <option value="Cerego">Cerego</option>
@@ -125,12 +125,12 @@
 
         <div class="col">
             <label class="question">
-                Which of our allies would you like to give permission to contact you about additional resources to support our books?
+                Which of our partners would you like to give permission to contact you about additional resources to support our books?
                 <select multiple name="00NU00000055spm">
                     <option value="None" disabled selected>None</option>
-                    <option value="Online homework allies">Online homework allies</option>
-                    <option value="Adaptive courseware allies">Adaptive courseware allies</option>
-                    <option value="Customization tool allies">Customization tool allies</option>
+                    <option value="Online homework partners">Online homework partners</option>
+                    <option value="Adaptive courseware partners">Adaptive courseware partners</option>
+                    <option value="Customization tool partners">Customization tool partners</option>
                 </select>
             </label>
 
