update history banner copy

--- a/src/app/pages/home/banners/us-history/us-history.hbs
+++ b/src/app/pages/home/banners/us-history/us-history.hbs
@@ -14,7 +14,7 @@
 
         <div class="now-i-can flyout">
             <span>Now I can</span>
-            <span class="quote">Travel back in time</span>
+            <span class="quote">see into the past</span>
         </div>
 
         <div class="subject-links flyout">
