--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -65,8 +65,7 @@
             position: relative;
 
             .remover {
-                top: 0;
-                right: 0;
+                @include absolute(top 0 right 0);
             }
         }
 
