--- a/src/app/pages/partners/partners.scss
+++ b/src/app/pages/partners/partners.scss
@@ -117,6 +117,7 @@ $text-dark2: rgba(0, 0, 0, 0.7);
 
             p {
                 width: 100%;
+                margin-bottom: -0.25rem;
             }
         }
 
