Fix finish-profile submit button overlap problem
Float it instead of having a full-width div
Also: modify details title to accept HTML so `<sup>` can be used with
AP books

--- a/src/app/pages/finish-profile/finish-profile.scss
+++ b/src/app/pages/finish-profile/finish-profile.scss
@@ -51,10 +51,9 @@
 
         &.faculty .cta {
             @media (min-width: 481px) {
-                margin-top: -10rem;
-                padding-bottom: 8rem;
+                float: right;
+                top: -10rem;
                 position: relative;
-                z-index: -1;
             }
         }
     }
