--- a/src/app/pages/finish-profile/finish-profile.hbs
+++ b/src/app/pages/finish-profile/finish-profile.hbs
@@ -28,7 +28,7 @@
                     </label>
                     <label>
                         <span>Email</span>
-                        <input name="institutional_email__c" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required />
+                        <input name="00NU0000005oVQV" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required />
                     </label>
                     <label>
                         <span>Phone number</span>
