--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -58,35 +58,42 @@
     </section>
     <section class="resources block">
         <div class="container">
-        <div id="resources" class="row">
-            <h3>OpenStax Instructor Resources</h3>
-            <p>
-                Access these free resources with your verified instructor account.
-                <span id="extra-instructions"></span>
-            </p>
-            <div id="instructor-resources" class="resource"></div>
+            <div id="resources" class="row">
+                <h3>OpenStax Instructor Resources</h3>
+                <p>
+                    Access these free resources with your verified instructor account.
+                    <span id="extra-instructions"></span>
+                </p>
+                <div id="instructor-resources" class="resource"></div>
+            </div>
+            <div class="row">
+                <h3>Partner Resources</h3>
+                <p>
+                OpenStax partners provide additional, low-cost resources for your
+                book. See what’s offered for this title below and learn more about
+                our <a href="/partners">Partners here</a>.</p>
+                <div id='partners' class="resource"></div>
+            </div>
+            <div id="student-resources-section" class="row">
+                <h3>Student Resources</h3>
+                <p>
+                    Take a look at our free student resources that are integrated
+                    with your book to help you ace your course.
+                </p>
+                <div id="student-resources" class="resource"></div>
+            </div>
         </div>
-        <div class="row">
-        <h3>Partner Resources</h3>
-        <p>
-            OpenStax partners provide additional, low-cost resources for your
-            book. See what’s offered for this title below and learn more about
-            our <a href="/partners">Partners here</a>.</p>
-        <div id='partners' class="resource"></div>
+
+        <div class="student-resources-cta">
+            <div class="container">
+                <div class="caption">
+                    <h2>Learn how you can help bring more OpenStax books to your campus!</h2>
+                    <div class="cta hidden">
+                        <a class="btn handbook-link">view more</a>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div id="student-resources-section" class="row">
-            <h3>Student Resources</h3>
-            <p>
-                Take a look at our free student resources that are integrated
-                with your book to help you ace your course.
-            </p>
-            <div id="student-resources" class="resource"></div>
-        </div>
-        <div class="cta hidden">
-            <a class="btn handbook-link">Learn how you can help bring more
-                OpenStax books to your campus!</a>
-        </div>
-    </div>
     </section>
     <section id="details" class="authors">
         <div class="container">
