--- a/src/app/pages/details/details.scss
+++ b/src/app/pages/details/details.scss
@@ -200,7 +200,7 @@
                     width: 25rem;
                     position: absolute;
                     top: 0;
-                    right: 0;
+                    right: 1.5rem;
                     background-color: rgba(color(neutral-lightest), 0.95);
                     padding: 1.5rem;
                 }
@@ -397,10 +397,52 @@
 
         }
 
-        .cta {
-            flex: 0 1 100%;
-            margin-right: 1.5rem;
+        .student-resources-cta {
+            min-height: 60rem;
+            display: flex;
+            background-color: color(gold);
+            background-image: url('/images/details/student-resources-bg-lg.jpg');
+            background-repeat: no-repeat;
+            background-position: right 70%;
+            background-size: cover;
+            transition: All ease-in-out 0.3s;
+
+            @include phone {
+                min-height: 70rem;
+            }
+
+            @media screen and (min-width: 1920px) {
+                background-position: right 40%;
+            }
+
+            .container {
+                width: 100%;
+            }
+
+            .caption {
+                max-width: 56rem;
+                display: flex;
+                flex-flow: column wrap;
+                align-items: flex-start;
+            }
+
+            h2 {
+                font-size: 3.6rem;
+                color: color(blue);
+                margin-bottom: 3rem;
+                width: 100%;
+            }
+
+            a {
+                background-color: color(yellow);
+                padding: 1.5rem 3rem;
+
+                &:hover {
+                    background-color: darken(color(yellow), 5%);
+                }
+            }
         }
+
     }
 
     .resource {
