Fix email issues
Add preferred email field to faculty-verification
Fix field names for email fields in finish-profile

--- a/src/app/pages/faculty-verification/faculty-verification.hbs
+++ b/src/app/pages/faculty-verification/faculty-verification.hbs
@@ -32,6 +32,10 @@
                     Last name
                     <input name="last_name" type="text" required />
                 </label>
+                <label>
+                    <span>Preferred Email</span>
+                    <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required />
+                </label>
             </div>
 
             <div class="col">
