fix education banner area of home page to more closely match design

--- a/src/app/pages/home/education/education.hbs
+++ b/src/app/pages/home/education/education.hbs
@@ -25,7 +25,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="btn btn-large btn-yellow k-12" href="/k-12">
+                    <a class="btn btn-large btn-gold k-12" href="/k-12">
                         <span class="title">K-12</span>
                         <span class="blurb">Adaptive learning courseware and peer-reviewed textbooks for AP<sup>&reg;</sup> courses</span>
                     </a>
