--- a/src/app/components/shell/header/header.scss
+++ b/src/app/components/shell/header/header.scss
@@ -547,6 +547,7 @@ $transition: 0.3s;
             position: absolute;
             top: 1.2rem;
             left: 1.5rem;
+            font-size: 1.4rem;
 
             @include desktop {
                 position: static;
