Rework forms to use BookTitles module
Modified values according to Denver’s list
Made sub-lists of published and comingSoon
BookTitles is sorted merge of the two
Interest form uses BookTitles
Adoption and Renewal use published

--- a/src/app/pages/comp-copy/comp-copy.hbs
+++ b/src/app/pages/comp-copy/comp-copy.hbs
@@ -63,18 +63,18 @@
             <span>Book Requested</span>
             <select name="00NU00000053nzR" required />
                 <option value="" disabled selected>Please Select</option>
-                <option value="Anatomy and Physiology">Anatomy and Physiology</option>
+                <option value="Anatomy &amp; Physiology">Anatomy and Physiology</option>
                 <option value="Biology">Biology</option>
                 <option value="Chemistry">Chemistry</option>
-                <option value="College Physics">College Physics</option>
-                <option value="Concepts of Biology">Concepts of Biology</option>
-                <option value="Introduction to Sociology 2e">Introduction to Sociology 2e</option>
+                <option value="College Physics (Algebra)">College Physics</option>
+                <option value="Concepts of Bio (non-majors)">Concepts of Biology</option>
+                <option value="Introduction to Sociology">Introduction to Sociology 2e</option>
                 <option value="Introductory Statistics">Introductory Statistics</option>
-                <option value="Principles of Economics">Principles of Economics</option>
-                <option value="Principles of Macroeconomics">Principles of Macroeconomics</option>
-                <option value="Principles of Microeconomics">Principles of Microeconomics</option>
+                <option value="Economics">Principles of Economics</option>
+                <option value="Macro Econ">Principles of Macroeconomics</option>
+                <option value="Micro Econ">Principles of Microeconomics</option>
                 <option value="Psychology">Psychology</option>
-                <option value="U.S. History">U.S. History</option>
+                <option value="US History">U.S. History</option>
             </select>
         </label>
 
