--- a/src/app/pages/renewal/renewal.hbs
+++ b/src/app/pages/renewal/renewal.hbs
@@ -56,26 +56,13 @@
             <label>Your OpenStax book:
                 <select name="00NU00000053nzR" required>
                     <option value="" disabled selected></option>
-                    <option value="Algebra and Trigonometry">Algebra and Trigonometry</option>
-                    <option value="Anatomy and Physiology">Anatomy and Physiology</option>
-                    <option value="Biology">Biology</option>
-                    <option value="Chemistry">Chemistry</option>
-                    <option value="College Algebra">College Algebra</option>
-                    <option value="College Physics">College Physics</option>
-                    <option value="College Physics for AP® Courses ">College Physics for AP® Courses </option>
-                    <option value="Concepts of Biology">Concepts of Biology</option>
-                    <option value="Introduction to Sociology">Introduction to Sociology</option>
-                    <option value="Introduction to Sociology 2e">Introduction to Sociology 2e</option>
-                    <option value="Introductory Statistics">Introductory Statistics</option>
-                    <option value="Prealgebra">Prealgebra</option>
-                    <option value="Precalculus">Precalculus</option>
-                    <option value="Principles of Economics">Principles of Economics</option>
-                    <option value="Principles of Macroeconomics">Principles of Macroeconomics</option>
-                    <option value="Principles of Macroeconomics for AP® Courses">Principles of Macroeconomics for AP® Courses</option>
-                    <option value="Principles of Microeconomics">Principles of Microeconomics</option>
-                    <option value="Principles of Microeconomics for AP® Courses">Principles of Microeconomics for AP® Courses</option>
-                    <option value="Psychology">Psychology</option>
-                    <option value="U.S. History">U.S. History</option>
+                    {{#each titles}}
+                        {{#if this.text}}
+                            <option value="{{this.value}}">{{this.text}}</option>
+                        {{else}}
+                            <option value="{{this}}">{{this}}</option>
+                        {{/if}}
+                    {{/each}}
                 </select>
             </label>
             <p>
@@ -107,11 +94,13 @@
                      <option value="WebAssign">WebAssign</option>
                      <option value="Wiley Plus">Wiley Plus</option>
                      <option value="XYZ Homework">XYZ Homework</option>
+                     <option value="" data-other="other-partner">Other (specify below)</option>
                 </select>
             </label>
 
-            <label>Other
-                <input name="00NU0000005Vls8" class="short" type="text">
+            <label id="other-partner">Other
+                <input name="00NU0000005Vls8" class="short" type="text"
+                placeholder="Partner resources not listed above?">
             </label>
 
             <label>
