update cta copy on details page

--- a/src/app/pages/details/details.hbs
+++ b/src/app/pages/details/details.hbs
@@ -38,7 +38,7 @@
                         course?
                     </p>
                     <a href="/adoption?{{title}}" class="btn hide-if-coming-soon">Adopt This Book</a>
-                    <a href="/interest?{{title}}" class="secondary btn">get interested</a>
+                    <a href="/interest?{{title}}" class="secondary btn">Sign up for info</a>
                 </div>
             </div>
             </section>
