Change Download a PDF for coming soon books
Make it say “Download a PDF sample”

--- a/src/app/components/get-this-title/get-this-title.hbs
+++ b/src/app/components/get-this-title/get-this-title.hbs
@@ -22,7 +22,7 @@
             <div class="option">
                 <a href="{{pdfLink}}" class="show-pdf-submenu">
                     <span class="fa fa-cloud-download"></span>
-                    Download a PDF
+                    Download a PDF{{#if comingSoon}} sample{{/if}}
                 </a>
             </div>
         {{/if}}
